--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,14 +12,18 @@ on:
         type: string
 
 jobs:
-  build:
+  validate:
+    uses: ./.github/workflows/validate.yml
+
+  submit:
+    needs: validate
     runs-on: ubuntu-latest
     permissions:
       contents: write
     
     steps:
       - name: checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
         with:
           ref: ${{ github.event.inputs.tag || github.ref }}
 
@@ -41,18 +45,21 @@ jobs:
       - name: install dependencies
         run: bun install --frozen-lockfile
 
-      - name: build extension
-        run: bun run build
-
-      - name: create zip artifact
+      - name: zip extensions
         run: |
-          cd .output/chrome-mv3
-          zip -r ../../distacted-chrome-mv3.zip .
+          bun run zip
+          bun run zip:firefox
 
-      - name: create release
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: ${{ github.event.inputs.tag || github.ref_name }}
-          files: distacted-chrome-mv3.zip
+      - name: submit to stores
+        run: |
+          bunx wxt submit \
+            --chrome-zip .output/*-chrome.zip \
+            --firefox-zip .output/*-firefox.zip --firefox-sources-zip .output/*-sources.zip
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CHROME_EXTENSION_ID: ${{ secrets.CHROME_EXTENSION_ID }}
+          CHROME_CLIENT_ID: ${{ secrets.CHROME_CLIENT_ID }}
+          CHROME_CLIENT_SECRET: ${{ secrets.CHROME_CLIENT_SECRET }}
+          CHROME_REFRESH_TOKEN: ${{ secrets.CHROME_REFRESH_TOKEN }}
+          FIREFOX_EXTENSION_ID: ${{ secrets.FIREFOX_EXTENSION_ID }}
+          FIREFOX_JWT_ISSUER: ${{ secrets.FIREFOX_JWT_ISSUER }}
+          FIREFOX_JWT_SECRET: ${{ secrets.FIREFOX_JWT_SECRET }}
